# Claw_news

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  deploy-prod.sh  deploy.example.sh  deploy.sh  docker-compose.verify.yml  docker-compose.yml  feeds.example.yaml  main.py  pyproject.toml  requirements.txt
aggregator/: merger.py
app/: category_policy.py  config.py  github_ranking.py  main.py
collectors/: ai_rss.py  base.py  github.py  huggingface.py  ithome.py  rss_sources.py  taptap.py  utils.py
deploy/: socat-proxy-forward.service
docs/: CONVENTIONS.md  PUBLICATION_POLICY.md  README.md  com.lanser.clawnews.evening.plist  com.lanser.clawnews.morning.plist.example  deploy-server-guide.md  rss-backlog.md
pusher/: telegram.py  wecom.py
scripts/: quick-verify.sh  replay-content-selection.py
spec/: README.md
tests/: conftest.py  test_ai_rss.py  test_app_api.py  test_app_config.py  test_app_crawler.py  test_app_llm.py  test_app_wecom.py  test_cli_main.py  test_content_replay.py  test_content_selection.py  test_data_contracts.py  test_delivery_state.py  test_delivery_store.py  test_deploy_build_config.py  test_github_collector.py  test_github_ranking.py  test_github_store.py  test_huggingface.py  test_ingest_job.py  test_ingest_status_store.py  test_ingestion_store.py  test_ithome.py  test_main.py  test_merger.py  test_news_agent.py  test_news_pipeline.py  test_relevance_filter.py  test_resilience.py  test_rss_collector.py  test_settings.py  test_source_metrics_store.py  test_source_policy.py  test_source_state_store.py  test_state_store.py  test_state_store_digest.py  test_taptap.py  test_telegram_html_renderer.py  test_telegram_pusher.py  test_time_policy.py  (+3 more)
(+147 files in other folders)
