[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-news"
version = "0.2.0"
description = "Daily hot-news aggregation and WeCom push"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.0",
  "pyyaml>=6.0",
  "curl-cffi>=0.7.0",
  "deep-translator>=1.11.0",
  "portalocker>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
